13.0.0 breaking change: consolidate mock dirs
